# OmnityEngine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Omnity.sln  README.md  ReadMe.md  vcpkg.json
.github/workflows/: Android.yml  Desktop.yml  Ubuntu.yml  Windows.yml  cmake-single-platform.yml
CMake/: functions.cmake  vcpkg_android.cmake
Omnity.Editor.Windows/: Omnity.Editor.Windows.csproj
Omnity.Player.Android/: AndroidManifest.xml  Omnity.Player.Android.csproj  Program.cs
Omnity.Player.Windows/: Omnity.Player.Windows.csproj  Program.cs
Omnity.Player.Windows/Properties/: launchSettings.json
OmnityEngine.Build.SourceGenerator/: NativeMethodImplGenerator.cs  OmnityEngine.Build.SourceGenerator.csproj  Utils.cs
OmnityEngine.Core/: Application.cs  Graphic.cs  OmnityEngine.Core.csproj
OmnityEngine.Core/Graphic/: GpuDevice.cs  GraphicHost.cs
OmnityEngine.Core/Graphic/LowLevel/: Buffer.cs  GraphicContext.cs
OmnityEngine.Core/Native/: Host.cs  Interop.cs
OmnityNative.Android/: OmnityNative.Android.vcxproj  OmnityNative.Android.vcxproj.filters  OmnityNative_Android.cpp  OmnityNative_Android.h
OmnityNative.Common/: Application.cpp  Application.h  Graphic.Vulkan.cpp  Graphic.Vulkan.h  Graphic.cpp  Graphic.h  OmnityApi.cpp  OmnityApi.h  OmnityNative.Common.vcxitems
OmnityNative.Windows/: GraphicImpl.cpp  OmnityNative.Windows.vcxproj  OmnityNative.Windows.vcxproj.filters  test.cpp
OmnityNative.iOS/: OmnityNative.iOS.vcxproj  OmnityNative.iOS.vcxproj.filters  OmnityNative_iOS.cpp  OmnityNative_iOS.h
Source/: CMakeLists.txt
Source/Editor/: CMakeLists.txt
Source/Editor/AssetImporter/: CMakeLists.txt
Source/Editor/ResourceDatabase/: CMakeLists.txt
Source/Editor/ResourceDatabase/Public/resource_database/: resource_database.h
Source/Editor/ResourceDatabase/Src/: resource_database.cpp
Source/Editor/ResourceImporters/: CMakeLists.txt
Source/Editor/ResourceImporters/Private/: texture_importers.h
Source/Editor/ResourceImporters/Public/resource_importers/: importers.h  resource_serializer.h
Source/Editor/ResourceImporters/Src/: importers.cpp
Source/Engine/: CMakeLists.txt  OmnityApp.cpp  OmnityApp.rc  OmnityRuntime.cpp  omnity_app.cpp  omnity_runtime.cpp  resource.h
Source/Engine/Base/: CMakeLists.txt
Source/Engine/Base/Public/base/: logger.h  object.h  omnity_string.h  omnity_types.h  omnity_uuid.h  reflection.h  scene.h  serialize.h  serialized_basic_types.h  string_utils.h  type.h  type_metadata.h  types.h
Source/Engine/Base/Src/: logger.cpp  object.cpp  omnity_string.cpp  scene.cpp  serialize.cpp  string_utils.cpp  type.cpp
Source/Engine/Base/include/: OmnityString.h
Source/Engine/Base/public/Base/: Logger.h  OmnityString.h  OmnityTypes.h  OmnityUUID.h
Source/Engine/Base/src/: Logger.cpp  OmnityString.cpp
Source/Engine/Core/: CMakeLists.txt
Source/Engine/Core/Public/core/: core.h
Source/Engine/Core/Src/: application.cpp
Source/Engine/Core/include/: Core.h
Source/Engine/Core/public/Core/: Core.h
Source/Engine/Core/src/: Application.cpp
Source/Engine/Entry/: CMakeLists.txt
Source/Engine/Graphic/: CMakeLists.txt
Source/Engine/Graphic/Public/graphic/: graphic.h  material.h  mesh.h  particle.h  shader.h  texture.h
Source/Engine/Graphic/Src/: graphic.cpp  material.cpp  mesh.cpp  particle.cpp  shader.cpp  texture.cpp
Source/Engine/Graphic/include/: Graphic.h
Source/Engine/Graphic/src/: Graphic.cpp
Source/Engine/GraphicBackend/: CMakeLists.txt
Source/Engine/GraphicBackend/Public/graphic_backend/: graphic_backend.h
Source/Engine/GraphicBackend/Src/: graphic_backend.cpp
Source/Engine/GraphicBackend/include/: GraphicBackend.h
Source/Engine/GraphicBackend/src/: GraphicBackend.cpp
Source/Engine/GraphicBackendVulkan/: CMakeLists.txt
Source/Engine/GraphicBackendVulkan/Public/vulkan_backend/: vulkan_backend.h
Source/Engine/GraphicBackendVulkan/Src/: vulkan_backend.cpp
Source/Engine/GraphicBackendVulkan/include/: VulkanBackend.h
Source/Engine/GraphicBackendVulkan/public/VulkanBackend/: VulkanBackend.h
Source/Engine/GraphicBackendVulkan/src/: VulkanBackend.cpp
Source/Engine/Logger/: CMakeLists.txt
Source/Engine/Logger/include/: Logger.h
Source/Engine/Logger/src/: Logger.cpp
Source/Engine/RHI/: CMakeLists.txt
Source/Engine/RHI/include/: Rhi.h
Source/Engine/RHI/src/: Rhi.cpp
Source/Engine/RHIVulkan/: CMakeLists.txt
Source/Engine/RHIVulkan/include/: RhiVulkan.h
Source/Engine/RHIVulkan/src/: RhiVulkan.cpp
Source/Engine/Resources/: CMakeLists.txt
Source/Engine/Resources/Private/: resource_provider_impl.h
Source/Engine/Resources/Public/resources/: resource_package.h  resources.h  resources_manager.h  text_asset.h  texture.h
Source/Engine/Resources/Src/: resource_package.cpp  resource_provider.cpp  resources_manager.cpp
Source/Engine/Resources/private/: ResourceProviderImpl.h
Source/Engine/Resources/public/Resources/: ResourcePackage.h  ResourcesManager.h  Texture.h
Source/Engine/Resources/src/: ResourcePackage.cpp  ResourceProvider.cpp  ResourcesManager.cpp
Source/Test/: CMakeLists.txt  ResourcesTest.cpp  base_test.cpp  resources_test.cpp
