cmake_minimum_required(VERSION 3.23)
enable_testing()
include("CMake/functions.cmake")

find_program(FIND_CMAKE_CXX_CPPCHECK NAMES cppcheck)
if (EXISTS "${FIND_CMAKE_CXX_CPPCHECK}")
    message("Use ${CMAKE_CXX_CPPCHECK}")
    set(CMAKE_CXX_CPPCHECK "${FIND_CMAKE_CXX_CPPCHECK}")
else()
    message(WARNING "cppcheck not found")
endif()
set(CMAKE_CXX_STANDARD 20)
if(WIN32)
    set(VCPKG_TARGET_TRIPLET "x64-windows-static")
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
    enable_language("RC")
else()
    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
    message("set POSITION_INDEPENDENT_CODE to true")
endif()

project(OmnityEngine)
if (MSVC)
    add_compile_options(/W4 /WX)
    add_link_options(/WX)
else()
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()
if (MSVC)
    add_compile_options("/utf-8")
endif()
add_subdirectory("Source" "${CMAKE_BINARY_DIR}/Binary")